--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+*, html, body {
+  box-sizing: border-box;
+}
+
+#root, html, body, .app-container {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +13,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.main-container {
+  min-height: calc(100vh - 180px);
 }
 
 code {
@@ -25,8 +37,8 @@ h1{
 
 nav{
   display: flex;
-  width: 80vw;
-  justify-content: flex-start;
+  width: 95vw;
+  justify-content: space-between;
   padding: 1rem;
 }
 
@@ -54,6 +66,7 @@ footer {
 
 footer > img{
   width: 200px;
+  height: 41px;
   margin: 0;
 }
 footer > p{
