--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ code {
 
 h1{
   text-align: center;
+  margin-bottom: 2rem;
 }
 
 nav{
@@ -55,11 +56,12 @@ a:hover{
 footer {
   display: flex;
   justify-content: center;
+  align-items: center;
   text-align: center;
   padding: 2rem;
   position: relative;
   bottom: 0;
-  width: 90%;
+  width: 100%;
   height: 40px;
   margin-top: 2rem;
 }
@@ -71,7 +73,6 @@ footer > img{
 }
 footer > p{
   margin: 0;
-  padding-top: 0.7rem;
 }
 
 form{
@@ -89,9 +90,13 @@ form{
   flex-direction: column;
   align-items: center;
   width: 250px;
-  padding: 0.5rem 0.5rem 0 0.5rem;
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+  margin-bottom: 2rem;
   border: 0.5px solid rgb(136, 136, 136);
-  border-radius: 5px;
+  border-radius: 10px;
+  -webkit-box-shadow: 5px 5px 15px 0px rgba(168,165,168,1);
+  -moz-box-shadow: 5px 5px 15px 0px rgba(168,165,168,1);
+  box-shadow: 5px 5px 15px 0px rgba(168,165,168,1);
 }
 
 .card:hover{
@@ -111,6 +116,7 @@ form{
 .card > img {
   display: block;
   max-width: 100%;
+  background-color: #f0f8ff;
 }
 
 table {
